[package]
name = "dembed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "rt"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serenity = "0.12"
dotenv = "0.15"
dotenv_codegen = "0.15"
url = "2.5"
futures = "0.3"
surrealdb = { version = "1.2.0", features = ["kv-mem"] }
regex = "1"
